--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ body{
 }
 .earn-card{
     margin: 2% 15%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     gap: 16px;
 }
 .card-content{
@@ -150,7 +151,7 @@ body{
 }
 
 .task-one{
-    margin: 16px 0;
+    margin: 16px 32px;
     padding: 30px;
     background-image: url(./svg/bonus_card_bg.svg);
     background-repeat: no-repeat;
@@ -160,7 +161,7 @@ body{
 }
 .task-two{
     background-color: #D6D5FA;
-    margin: 32px 0;
+    margin: 32px 32px;
     padding: 30px;
     border-radius: 24px;
     cursor: pointer;
@@ -300,5 +301,37 @@ footer{
     border-radius: 50%;
     color: #aeaed5;
     cursor: pointer;
+}
+
+@media only screen and (max-width:576px) {
+    .earn-card{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .manu, .coin-count, .welcome-design{
+        display: none;
+    }
+    .task-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .business, .website, .social-icon{
+        flex-direction: column;
+    }
+    .copyright{
+        margin: 26px 0;
+    }
+    
+}
+@media only screen and (min-width:576px) and (max-width:992px) {
+    .earn-card{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .coin-count, .line{
+        display: none;
+    }
+    .task-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+    
 }
 
